# changlog_api

./: .dockerignore  .env-default  .gitignore  .pre-commit-config.yaml  README.MD  docker-compose.yaml  pyproject.toml
backend/: Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
backend/app/: alembic.ini  db.py  enums.py  factories.py  main.py  models.py  schemas.py  wait_for_db.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 06e54576b284_initial_migration1.py  2b3e3b4b8f1e_initial.py  a59e69469894_init.py
backend/app/api/: dependencies.py  main.py
backend/app/api/routes/: create_update.py  point.py  product.py  product_updates.py  signin.py  update.py  update_points.py  user.py
backend/app/commons/: db.py
backend/app/handlers/: __init__.py  product.py  update.py  user.py
backend/app/modules/: auth.py  config.py
backend/app/scripts/: create_test_data.py
backend/app/tests/: conftest.py  test_s.py  test_users.py  utils.py
backend/app/tests/api/routes/: test_point.py  test_product.py  test_update.py  test_users.py
backend/app/tests/handlers/: test_products.py  test_users.py
