[tool.poetry]
name = "changelog"
version = "0.1.0"
description = ""
authors = ["Marcin Włodarczyk <gonzur75@gmail.com>"]


[tool.poetry.dependencies]
python = "^3.10"
pre-commit = "^3.8.0"
fastapi = {extras = ["standard"], version = "^0.112.2"}
sqlalchemy = "^2.0.32"


[build-system]
requires = ["poetry-core==1.8.3"]
build-backend = "poetry.core.masonry.api"
